plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
/* ... */
.progressbar-status-error {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='black' class='bi bi-exclamation-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z'/%3E%3C/svg%3E");
  background-color: var(--clr-neutral-600);
  background-repeat: no-repeat;
  background-position: center;
  border-radius: var(--border-radius);
}

.info__no-data {
  padding: 3.2rem 1.6rem;
  background-color: var(--clr-neutral-200);
  border: 1px solid var(--clr-neutral-300);
  border-radius: var(--border-radius);
  margin-bottom: 4.8rem;
}

